--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gamesbook</title>
+  <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  
+  <!--prevents cross-site request forgery (CSRF), a type of malicious web attack.-->
+  <%= csrf_meta_tags %> 
 </head>
 <body>
 
