--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -17,16 +17,16 @@
 <ul class="memories">
     <%= render @memories %>
 </ul>
-<%= will_paginate @memories, :param_name => 'all' %>
+<%= will_paginate @memories, :param_name => 'memories_page' %>
 </div>
 
 <!--user tab-->
 <% if logged_in? %>
 <div id="user">
 <ul class="memories">
-    <%= render @user_memories, :param_name => 'user' %>
+    <%= render @user_memories %>
 </ul>
-<%= will_paginate @user_memories %>
+<%= will_paginate @user_memories, :param_name => 'user_memories_page' %>
 </div>
 <% end %>
 </div>
