--- a/app/views/games/testing.html.erb
+++ b/app/views/games/testing.html.erb
@@ -1,12 +1,9 @@
 <% provide(:title, "Game_test") %>
-<%= javascript_include_tag params[:controller], params[:action] %> 
-<div id="game">
-    <p id="test1">This is a paragraph.</p>
-    <p id="test2">This is another paragraph.</p>
+<%= javascript_include_tag 'testing' %> 
+<p>Image to use:</p>
+<img src="/assets/double_ship.png" alt="The Scream">
 
-    <p>Input field: <input type="text" id="test3" value="Mickey Mouse"></p>
-
-    <button id="btn1" class="btn btn-primary">Set Text</button>
-    <button id="btn2" class="btn btn-primary">Set HTML</button>
-    <button id="btn3" class="btn btn-primary">Set Value</button>
-</div>
+<p>Canvas:</p>
+<canvas id="myCanvas" width="240" height="297" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.
+</canvas>
