--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,9 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Memory", memory_path %></li>
               <li><%= link_to "Game_Test", testing_path %></li>
-              
+              <li><%= link_to "Blackjack", blackjack_path %></li>
+              <li><%= link_to "Stopwatch", stopwatch_path %></li>
+              <li><%= link_to "Spaceship", spaceship_path %></li>
             </ul>
           </li>
           
