fixed blackjack picture issue for production

--- a/app/views/games/blackjack.html.erb
+++ b/app/views/games/blackjack.html.erb
@@ -3,10 +3,10 @@
 <h1>Blackjack</h1>
 <%= render 'greeting' %>
 <!--<div class="row">-->
-<!--<div id="imgs" style="display:none;">-->
-<!--	<img src='/assets/poker_cards.png' id='cards'></img>-->
-<!--	<img src='/assets/poker_cards_back.png' id='cards_back'></img>-->
-<!--</div>-->
+<div id="imgs" style="display:none;">
+	<img src='/assets/poker_cards.png' id='cards'></img>
+	<img src='/assets/poker_cards_back.png' id='cards_back'></img>
+</div>
 
 <div id="game" class="row">
     <div id="stat_panel" class="col-md-3">this is for status display</div>
