--- a/app/views/games/memory.html.erb
+++ b/app/views/games/memory.html.erb
@@ -1,16 +1,28 @@
 <% provide(:title, "Memory") %>
 <%= javascript_include_tag 'memory' %> 
-<h1>Memory</h1>
-<%= render 'greeting' %>
+<h1>Memory Game</h1>
 <div id="game">
-	<div id="stat_panel">
-		<p id="time">0:00:0</p>
-	</div>
-	<canvas id="canvas" width="250" height="400" border="5px solid black"></canvas>
 	
-	<div id="ctrl_panel">
+<%= render 'greeting' %>
+<h3 id="time">0:00:0</h3>
+<div class="row">
+	<div id="game_info" class="col-md-4">
+		<p>There are 10 pairs of cards with 10 different numbers on them, 
+			try to match each pair as fast as you can!</p>
 		<button id="btn_start" class="btn btn-primary">start</button>
 		<button id="btn_reset" class="btn btn-primary">reset</button>
+		
 	</div>
-	<%= link_to 'Show all records', memories_path %>
+	<div class="col-md-4">
+		
+		<canvas id="canvas" width="250" height="400" border="5px solid black"></canvas>
+	</div>
+	<div id="ctrl_panel" class="col-md-4">
+		<p>Want to see how good are you compared to other players?</p>
+		<%= link_to 'Show all records', memories_path %>
+	</div>
 </div>
+
+	
+	
+	
