finished blackjack and spaceship recoreds

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -240,7 +240,7 @@ input {
 
 /* microposts */
 
-.microposts, .memories {
+.microposts, .memories, .blackjacks, .spaceships {
   list-style: none;
   padding: 0;
   li {
