--- a/app/views/games/spaceship.html.erb
+++ b/app/views/games/spaceship.html.erb
@@ -5,5 +5,6 @@
 <div id="game">
 	<%= render 'greeting' %>
 	<canvas id="canvas" width="800" height="500" style="border: 1px solid black" tabindex="1"></canvas>
-	<!--<%= link_to 'Show all records', memories_path %>-->
+	<br>
+	<%= link_to 'Show all records', spaceships_path %>
 </div>
