--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,11 +1,9 @@
-<% provide(:title, "Memory Scores Board") %>
-<%= javascript_include_tag 'jquery.idTabs.min' %> 
-<h1>Memory Scores Board</h1>
+<% provide(:title, "Spaceship Scores Board") %>
 
-
+<h1>Spaceship Scores Board</h1>
 
 <!--create tabs-->
-<%= link_to "back to memory game", memory_path %><br><br>
+<%= link_to "back to spaceship game", spaceship_path %><br><br>
 <ul class="nav nav-tabs" id="myTab">
     <li class="active"><a href="#all" data-toggle="tab">All Players</a></li>
     <% if logged_in? %>
@@ -27,7 +25,7 @@
         </div>
     <% end %>
 </div>
-<%= link_to "back to memory game", memory_path %>
+<%= link_to "back to spaceship game", spaceship_path %>
 
 
 <script>
