--- a/app/views/blackjacks/_blackjack.html.erb
+++ b/app/views/blackjacks/_blackjack.html.erb
@@ -5,6 +5,6 @@
         $<%= blackjack.score %>
     </span>
     <span class="timestamp">
-        Played <%= time_ago_in_words(blackjack.created_at) %> ago.
+        Played <%= time_ago_in_words(blackjack.updated_at) %> ago.
     </span>
 </li>
