--- a/app/views/games/spaceship.html.erb
+++ b/app/views/games/spaceship.html.erb
@@ -4,7 +4,7 @@
 
 <div id="game">
 	<%= render 'greeting' %>
-	<canvas id="canvas" width="800" height="500" style="border: 1px solid black" tabindex="1"></canvas>
+	<canvas id="canvas" class="img-rounded" width="800" height="500" style="border: 1px solid black" tabindex="1"></canvas>
 	<br>
 	<%= link_to 'Show all records', spaceships_path %>
 </div>
