--- a/app/views/games/blackjack.html.erb
+++ b/app/views/games/blackjack.html.erb
@@ -12,24 +12,21 @@
 	<% end %>
 <% end %>
 
-<div class="row">
-    <div id="game_info" class="col-md-3 col-sm-3">
-    	<p>rules</p>
-    </div>
-    <!--<div class="col-md-6 col-sm-6"  style="background-color:yellow">-->
-		<canvas class="col-md-6 col-sm-6" id="canvas" width="500" height="500" background-color="green"></canvas>
-	<!--</div>-->
-	<div id="game_ctrl" class="col-md-3 col-sm-3">
-		<button id="btn_deal" class="btn btn-primary">Deal</button><br>
-		<button id="btn_hit" class="btn btn-primary">Hit</button>
-		<button id="btn_stand" class="btn btn-primary">Stand</button>
-		<p style="text-align: left;">Set Bet ($10 ~ $500): <span id="bet_value">10</span></p>
-		<input type="range" min="10" max="500" value="10" step="10" onchange="set_bet(this.value)"/>
-		
-		
-		<button id="btn_reset" class="btn btn-primary">Reset Bank</button>
+	<canvas id="canvas" class="img-rounded" width="600" height="500" style="border: 1px solid black" background-color="green"></canvas>
+	<br>
+	<div class="row">
+		<div>
+			<p>Set Bet ($10 ~ $500): <span id="bet_value">10</span></p>
+			<div class="col-md-2 col-md-offset-5">
+				<input type="range" min="10" max="500" value="10" step="10" onchange="set_bet(this.value)"/>
+			</div>
+		</div>
 	</div>
-		<%= link_to 'Show all records', blackjacks_path %>
-	</div>
+	<button id="btn_deal" class="btn btn-info">Deal</button>
+	<button id="btn_hit" class="btn btn-success">Hit</button>
+	<button id="btn_stand" class="btn btn-danger">Stand</button>
+	<button id="btn_reset" class="btn btn-warning">Reset Bank</button>
+	<br>
+	<%= link_to 'Show all records', blackjacks_path %>
 </div>
-</div>
+
