GamesBook layout changed

--- a/app/views/games/_greeting.html.erb
+++ b/app/views/games/_greeting.html.erb
@@ -7,6 +7,7 @@
     <% else %>
         var logged_in = false;
         $("#name").html("there");
-        $("#greeting").append("<br><em>In order to make your score recorded, please log in or sign up!</em>");
+        $("#greeting").append("<br><em>To make your score recorded, please log in or sign up!");
+        
     <% end %>
 <% end %>
