--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "GamesBook", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         
@@ -9,10 +9,9 @@
               Games <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Memory", memory_path %></li>
-              <li><%= link_to "Game_Test", testing_path %></li>
-              <li><%= link_to "Blackjack", blackjack_path %></li>
               <li><%= link_to "Stopwatch", stopwatch_path %></li>
+              <li><%= link_to "Memory", memory_path %></li>
+              <li><%= link_to "Blackjack", blackjack_path %></li>
               <li><%= link_to "Spaceship", spaceship_path %></li>
             </ul>
           </li>
