--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
+  Contact the Ruby on Rails Tutorial about how to build a website at the
   <a href="http://www.railstutorial.org/#contact">contact page</a>.
+</p>
+<p>
+  Contact me for any issues and suggestions about GamesBook
+  <a href="mailto: bpru7443@gmail.com">here</a>.
 </p>
