--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,11 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
+  GamesBook is built based on <a href="http://www.railstutorial.org/"><em>Ruby on Rails
+  Tutorial</em></a>, a
   <a href="http://www.railstutorial.org/book">book</a> and
   <a href="http://screencasts.railstutorial.org/">screencast series</a>
   to teach web development with
   <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
 </p>
+<p>Feel free to <a href="mailto:bpru7443@gmail.com">email your suggestions</a> to me, thanks a lot!!!</p>
