--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,19 +10,18 @@
       
       <div class="row" style="text-align: center" >
         <div class="col-md-6 form-inline">
-          <!--<%= f.label :use_gravatar, "use or upload your own picture" %>-->
-          <%= f.radio_button :use_gravatar, false %>
+          
            
         </div>
         <div class="col-md-6">
-          <!--<%= f.label :use_gravatar, "use your gravatar picture" %>-->
-          <%= f.radio_button :use_gravatar, true %>
+          
         </div>
       </div>
       
       <div class="row" style="text-align: center">
         <div class="col-md-6">
-          <p><em>Your costume picture:</em></p>
+          <p><em>Your uploaded picture:</em></p>
+          <%= f.radio_button :use_gravatar, false %><br><br>
           <%= image_tag current_user.picture.url, size: "80", alt: "Plz upload" %>
           <span class="picture">
             <%= f.file_field :picture %>
@@ -32,6 +31,7 @@
       <!--class="gravatar_edit">-->
         <div class="col-md-6">
           <p><em>Your gravatar picture:</em></p>
+          <%= f.radio_button :use_gravatar, true %><br><br>
           <%= image_tag gravatar_url @user %><br>
           <a href="http://gravatar.com/emails" target="_blank">change your gravatar picture</a>
         </div>
