finish stopwatch records and minor website layout modification

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -240,7 +240,7 @@ input {
 
 /* microposts */
 
-.microposts, .memories, .blackjacks, .spaceships {
+.microposts, .memories, .blackjacks, .spaceships, .stopwatches {
   list-style: none;
   padding: 0;
   li {
