--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,4 +8,10 @@
   to teach web development with
   <a href="http://rubyonrails.org/">Ruby on Rails</a>.
 </p>
+<p>I learned how to build all these games from the following courses in
+  <%= link_to "coursera", "http://www.coursera.org" %>:</p>
+  <ul>
+    <li><%= link_to "An Introduction to Interactive Programming in Python (Part 1)", "https://www.coursera.org/course/interactivepython1" %></li>
+    <li><%= link_to "An Introduction to Interactive Programming in Python (Part 2)", "https://www.coursera.org/course/interactivepython2" %></li>
+  </ul>
 <p>Feel free to <a href="mailto:bpru7443@gmail.com">email your suggestions</a> to me, thanks a lot!!!</p>
