--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,8 +2,14 @@
 <h1>Help</h1>
 <p>
   Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/#help">Rails Tutorial help section</a>.
-  To get help on this sample app, see the
+  <a href="http://www.railstutorial.org/#help"><em>Rails Tutorial help section</em></a>
+  and
   <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
   book</a>.
+</p>
+<p>
+  Learn more about computer science through building interactive games 
+  <em>
+    <%= link_to "here.", "https://www.coursera.org/specializations/fundamentalscomputing2?utm_medium=courseDescripTop" %>
+  </em>
 </p>
