--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -3,4 +3,7 @@
     <%= render @feed_items %>
   </ol>
   <%= will_paginate @feed_items %>
+<% else %>
+  <h4><em>Oops! Looks like you haven't posted anything and followed anyone yet.<em></em></h4>
+  <h4><em>Post something or find and follow your friends <%= link_to "here.", users_path %></em></h4>
 <% end %>
