make external links show up in new tabl

--- a/app/views/games/spaceship.html.erb
+++ b/app/views/games/spaceship.html.erb
@@ -4,7 +4,7 @@
 
 <div id="game">
 	<%= render 'greeting' %>
-	<p><strong>!!!For best gaming experience for this game, please use <a href="http://www.google.com/chrome">Google Chrome</a>!!!</strong></p>
+	<p><strong>!!!For best gaming experience for this game, please use <a href="http://www.google.com/chrome" target="_blank">Google Chrome</a>!!!</strong></p>
 	<canvas id="canvas" class="img-rounded" width="800" height="500" style="border: 1px solid black" tabindex="1"></canvas>
 	<br>
 	<%= link_to 'Show all records', spaceships_path %>
