--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,15 @@
 <footer class="footer">
   <small>
     GamesBook is built based on 
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    <a href="http://www.railstutorial.org/" target="_blank">Ruby on Rails Tutorial</a>
+    by <a href="http://www.michaelhartl.com/" target="_blank">Michael Hartl</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Help", help_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="http://news.railstutorial.org/" target="_blank">News</a></li>
     </ul>
   </nav>
 </footer>
