--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,17 +1,17 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  GamesBook is built based on <a href="http://www.railstutorial.org/"><em>Ruby on Rails
+  GamesBook is built based on <a target="_blank" href="http://www.railstutorial.org/"><em>Ruby on Rails
   Tutorial</em></a>, a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
+  <a href="http://www.railstutorial.org/book" target="_blank">book</a> and
+  <a href="http://screencasts.railstutorial.org/" target="_blank">screencast series</a>
   to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
+  <a href="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>.
 </p>
 <p>I learned how to build all these games from the following courses in
-  <%= link_to "coursera", "http://www.coursera.org" %>:</p>
+  <%= link_to "coursera", "http://www.coursera.org", target: "_blank" %>:</p>
   <ul>
-    <li><%= link_to "An Introduction to Interactive Programming in Python (Part 1)", "https://www.coursera.org/course/interactivepython1" %></li>
-    <li><%= link_to "An Introduction to Interactive Programming in Python (Part 2)", "https://www.coursera.org/course/interactivepython2" %></li>
+    <li><%= link_to "An Introduction to Interactive Programming in Python (Part 1)", "https://www.coursera.org/course/interactivepython1", target: "_blank" %></li>
+    <li><%= link_to "An Introduction to Interactive Programming in Python (Part 2)", "https://www.coursera.org/course/interactivepython2", target: "_blank" %></li>
   </ul>
 <p>Feel free to <a href="mailto:bpru7443@gmail.com">email your suggestions</a> to me, thanks a lot!!!</p>
