--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,7 +2,7 @@
 <h1>Contact</h1>
 <p>
   Contact the Ruby on Rails Tutorial about how to build a website at the
-  <a href="http://www.railstutorial.org/#contact">contact page</a>.
+  <a href="http://www.railstutorial.org/#contact" target="_blank">contact page</a>.
 </p>
 <p>
   Contact me for any issues and suggestions about GamesBook
