add change profile picture links to user page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
         <%= @user.name %>
       </h1>
     </section>
+    <%= link_to "Change profile picture", edit_user_path %>
     <section class="stats">
       <%= render 'shared/stats' %>
     </section>
