--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,22 +3,36 @@
     <%= link_to "GamesBook", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Games <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Stopwatch", stopwatch_path %></li>
-              <li><%= link_to "Memory", memory_path %></li>
-              <li><%= link_to "Blackjack", blackjack_path %></li>
-              <li><%= link_to "Spaceship", spaceship_path %></li>
-            </ul>
-          </li>
-          
         <li><%= link_to "Home", root_path %></li>
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
+        <% end %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Games <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Stopwatch", stopwatch_path %></li>
+            <li><%= link_to "Memory", memory_path %></li>
+            <li><%= link_to "Blackjack", blackjack_path %></li>
+            <li><%= link_to "Spaceship", spaceship_path %></li>
+          </ul>
+        </li>
+        
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Game Records <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Stopwatch Records", stopwatches_path %></li>
+            <li><%= link_to "Memory Records", memories_path %></li>
+            <li><%= link_to "Blackjack Records", blackjacks_path %></li>
+            <li><%= link_to "Spaceship Records", spaceships_path %></li>
+          </ul>
+        </li>
+          
+        
+        <% if logged_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
