--- a/app/views/spaceships/index.html.erb
+++ b/app/views/spaceships/index.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Spaceship Scores Board") %>
 
 <h1>Spaceship Scores Board</h1>
+<%= render "shared/scoreboard_msg" %>
 
 <!--create tabs-->
 <%= link_to "back to spaceship game", spaceship_path %><br><br>
