--- a/app/views/stopwatches/index.html.erb
+++ b/app/views/stopwatches/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Memory Scores Board") %>
 <h1>Stopwatch Scores Board</h1>
-
+<%= render "shared/scoreboard_msg" %>
 
 
 <!--create tabs-->
