minor fixes not finish game recard in user page yet

--- a/app/views/games/memory.html.erb
+++ b/app/views/games/memory.html.erb
@@ -3,8 +3,8 @@
 <h1>Memory Game</h1>
 <div id="game">
 	<%= render 'greeting' %>
-	<p>There are 10 pairs of cards with 10 different numbers on them, 
-			try to match each pair as fast as you can!</p>
+	<p>There are 10 pairs of cards with 10 different numbers, 
+			try to match all pairs as fast as you can!</p>
 	<h3 id="time">0:00:0</h3>
 	<canvas id="canvas" class="img-rounded" width="250" height="400" style="border:1px solid black"></canvas><br><br>
 	
