--- a/app/views/games/_greeting.html.erb
+++ b/app/views/games/_greeting.html.erb
@@ -1,7 +1,7 @@
 <div class="greeting">
     <h4 id="greeting">Hi <span id="name"></span>, welcome to the game!</h4>
     <% if !logged_in? %>
-        <p id="logged" display="none"><em>To make your score recorded, please <a href="/login">log in</a> or <a href="/signup">sign up</a></p>
+        <p id="logged" display="none"><em>To make your score recorded, please <a href="/login">log in</a> or <a href="/signup">sign up</a></em></p>
     <% end %>
     <%= javascript_tag do %>
         $("body").attr("data-no-turbolink", "");
