--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -47,10 +47,10 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :password %>
+      <%= f.label :password, "Change password" %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, "Confirm new password" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
       
       
